Premiere partie du projet

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Bootstrap 4 Simple Portfolio</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">   
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <header class="page-header d-md-flex justify-content-center align-items-center py-5"> 
+    <header class="page-header d-md-flex justify-content-center align-items-center py-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2 text-center text-white">
@@ -29,120 +29,122 @@
 
     <div class="" id="about">
         <div class="">
-            <div class="">
-                <section class="">
-                    <h2 class="">We've got what you need!</h2>
+            <div class="bg-warning">
+                <section class=" text-center p-lg-5 col-8 offset-2 ">
+                    <h2 class="font-weight-bold py-5">We've got what you need!</h2>
                     <p class="">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                    <a href="#services" class="">Get Started!</a>
+                    <a href="#services" class="btn btn-secondary mb-5">Get Started!</a>
                 </section>
             </div>
         </div>
     </div>
 
     <div id="" class="">
-        <h2 class="">At Your Service</h2>
-        <div class="">
-            <div class="">
-                <section class="">
-                    <i class="fa fa-3x fa-diamond"></i>
-                    <h3 class="">Sturdy Templates</h3>
-                    <p class="">Our templates are updated regularly so they don't break.</p>
+        <h2 class="text-center display-5 mt-4 font-weight-bold">At Your Service</h2>
+        <div class="container">
+            <div class="row m-2">
+                <section class="col-xl-3 col-lg-6 col-md-12 col-sm-12 p-3 text-center ">
+                    <i class="fa fa-3x fa-diamond text-warning p-4"></i>
+                    <h3 class="font-weight-bold">Sturdy Templates</h3>
+                    <p class="text-muted">Our templates are updated regularly so they don't break.</p>
                 </section>
-                <section class="">
-                    <i class="fa fa-3x fa-paper-plane"></i>
-                    <h3 class="">Ready to Ship</h3>
-                    <p class="">You can use this theme as is, or you can make changes!</p>
+                <section class="col-xl-3 col-lg-6 col-md-12 col-sm-12 p-3 text-center ">
+                    <i class="fa fa-3x fa-paper-plane text-warning p-4"></i>
+                    <h3 class="font-weight-bold">Ready to Ship</h3>
+                    <p class="text-muted">You can use this theme as is, or you can make changes!</p>
                 </section>
-                <section class="">
-                    <i class="fa fa-3x mb-3 fa-newspaper-o"></i>
-                    <h3 class="">Up to Date</h3>
-                    <p class="">We update dependencies to keep things fresh.</p>
+                <section class="col-xl-3 col-lg-6 col-md-12 col-sm-12 p-3 text-center ">
+                    <i class="fa fa-3x mb-3 fa-newspaper-o text-warning p-3"></i>
+                    <h3 class="font-weight-bold">Up to Date</h3>
+                    <p class="text-muted">We update dependencies to keep things fresh.</p>
                 </section>
-                <div class="">
-                    <i class="fa fa-3x fa-heart"></i>
-                    <h3 class="">Made with Love</h3>
-                    <p class="">You have to make your websites with love these days!</p>
+                <div class="col-xl-3 col-lg-6 col-md-12 col-sm-12 p-3 text-center ">
+                    <i class="fa fa-3x fa-heart text-warning p-4"></i>
+                    <h3 class="font-weight-bold">Made with Love</h3>
+                    <p class="text-muted">You have to make your websites with love these days!</p>
                 </div>
             </div>
         </div>
     </div>
 
 
-    <div id="portfolio" class="">
-        <figure class="">
+    <div id="portfolio" class="row no-gutters">
+        <figure class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
            <a href="#">
-               <img src="img/portfolio/thumbnails/1.jpg" class="" alt="My picture">
+               <img src="img/portfolio/thumbnails/1.jpg" class="img-fluid" alt="My picture" >
            </a>
-           <figcaption class="">
-               <small class="">Category Name</small><span>Project 1</span>
+           <figcaption class="text-center p-4">
+               <small class="d-block">Category Name</small><span>Project 1</span>
            </figcaption>
         </figure>
-        <figure class="">
+        <figure class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
            <a href="#">
-               <img src="img/portfolio/thumbnails/2.jpg" class="" alt="My picture">
+               <img src="img/portfolio/thumbnails/2.jpg" class="img-fluid" alt="My picture">
            </a>
-           <figcaption class="">
-               <small class="">Category Name</small><span>Project 2</span>
+           <figcaption class="text-center p-4">
+               <small class="d-block">Category Name</small><span>Project 2</span>
            </figcaption>
         </figure>
-        <figure class="">
+        <figure class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
            <a href="#">
-               <img src="img/portfolio/thumbnails/3.jpg" class="" alt="My picture">
+               <img src="img/portfolio/thumbnails/3.jpg" class="img-fluid" alt="My picture">
            </a>
-           <figcaption class="">
-               <small class="">Category Name</small><span>Project 3</span>
+           <figcaption class="text-center p-4">
+               <small class="d-block">Category Name</small><span>Project 3</span>
            </figcaption>
         </figure>
-        <figure class="">
+        <figure class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
            <a href="#">
-               <img src="img/portfolio/thumbnails/4.jpg" class="" alt="My picture">
+               <img src="img/portfolio/thumbnails/4.jpg" class="img-fluid" alt="My picture">
            </a>
-           <figcaption class="">
-               <small class="">Category Name</small><span>Project 4</span>
+           <figcaption class="text-center p-4">
+               <small class="d-block">Category Name</small><span>Project 4</span>
            </figcaption>
         </figure>
-        <figure class="">
+        <figure class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
            <a href="#">
-               <img src="img/portfolio/thumbnails/5.jpg" class="" alt="My picture">
+               <img src="img/portfolio/thumbnails/5.jpg" class="img-fluid" alt="My picture">
            </a>
-           <figcaption class="">
-               <small class="">Category Name</small><span>Project 5</span>
+           <figcaption class="text-center p-4">
+               <small class="d-block">Category Name</small><span>Project 5</span>
            </figcaption>
-        </figure>            
-        <figure class="">
+        </figure>
+        <figure class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
            <a href="#">
-               <img src="img/portfolio/thumbnails/6.jpg" class="" alt="My picture">
+               <img src="img/portfolio/thumbnails/6.jpg" class="img-fluid" alt="My picture">
            </a>
-           <figcaption class="">
-               <small class="">Category Name</small><span>Project 6</span>
+           <figcaption class="text-center p-4">
+               <small class="d-block">Category Name</small><span>Project 6</span>
            </figcaption>
-        </figure>          
+        </figure>
     </div>
 
 
     <div class="">
-        <section class="">
-            <h2 class="">Free Download at Start Bootstrap!</h2>
-            <a href="#" class="">Download Now!</a>
+        <section class="bg-inverse text-white p-5 text-center">
+            <h2 class="text-center display-5 font-weight-bold pb-3">Free Download at Start Bootstrap!</h2>
+            <a href="#" class="btn btn-warning ">Download Now!</a>
         </section>
     </div>
 
-    <section id="contact" class="">
-        <h2 class="">Let's Get In Touch!</h2>       
-        <div class="">
-            <div class="">
+    <section id="contact" class="text-center ">
+        <h2 class="p-4">Let's Get In Touch!</h2>
+        <div class="container">
+        <div class="row">
+            <div class="col-lg-8 offset-lg-2">
                 <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!
                 </p>
             </div>
-            <div class="">
+            <div class="col-lg-4 offset-lg-2 mt-5 mb-5">
                 <i class="fa fa-phone fa-3x "></i>
                 <p>123-456-6789</p>
             </div>
-            <div class="">
-                <i class="fa fa-envelope-o fa-3x "></i>
+            <div class="col-lg-4 mt-5 mb-5">
+                <i class="fa fa-envelope-o fa-3x  "></i>
                 <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
             </div>
         </div>
+    </div>
     </section>
 
     <!-- jQuery -->
@@ -153,7 +155,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
     <!-- Plugin JavaScript -->
-    
+
 
 
     <!-- Theme JavaScript -->
