--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
 </head>
 
 <body>
+    <ul class="nav justify-content-end">
+      <li class="nav-item">
+          <a href="#" class="nav-link home"> home</a>
+      </li>
+      <li class="nav-item">
+          <a href="#" class="nav-link about">About</a>
+      </li>
+      <li class="nav-item">
+          <a href="#" class="nav-link services">Services</a>
+      </li>
+      <li class="nav-item">
+          <a href="#" class="nav-link contact">Eportfolio</a>
+      </li>
+      <li class="nav-item">
+          <a href="#" class="nav-link contact">Contact</a>
+      </li>
+  </ul>
     <header class="page-header d-md-flex justify-content-center align-items-center py-5">
         <div class="container">
             <div class="row">
@@ -70,66 +87,213 @@
 
     <div id="portfolio" class="row no-gutters">
         <figure class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
-           <a href="#">
-               <img src="img/portfolio/thumbnails/1.jpg" class="img-fluid" alt="My picture" >
-           </a>
-           <figcaption class="text-center p-4">
-               <small class="d-block">Category Name</small><span>Project 1</span>
-           </figcaption>
+            <a href="#item1" data-toggle="modal">
+                <img src="img/portfolio/thumbnails/1.jpg" class="img-fluid img1" alt="My picture" >
+            </a>
+            <figcaption class="text-center p-4">
+                <small class="d-block">Category Name</small><span>Project 1</span>
+            </figcaption>
+            <div class="modal" id="item1">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <header class="modal-header">
+                            <h3>Bootstrap</h3>
+                            <button class="close" data-dismiss="modal">&times;
+                            </button>
+                        </header>
+                        <div class="modal-body text-center">
+                            <img data-toggle="modal" src="img/portfolio/fullsize/1.jpg" class="img-fluid m-3" alt="My picture" >
+                            <p><strong>Ici c'est modal </strong>Maecenas sed diam eget risus varius blandit sit amet non magna. Vestibulum id ligula porta felis euismod semper. Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                        </div>
+                        <footer class="modal-footer">
+                            <button class="btn btn-secondary" data-dismiss="modal" >Back</button>
+                        </footer>
+                    </div>
+                </div>
+            </div>
         </figure>
+
+        <!-------------------------------------------->
+
         <figure class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
-           <a href="#">
-               <img src="img/portfolio/thumbnails/2.jpg" class="img-fluid" alt="My picture">
-           </a>
-           <figcaption class="text-center p-4">
-               <small class="d-block">Category Name</small><span>Project 2</span>
-           </figcaption>
+            <a href="#item2" data-toggle="modal">
+                <img src="img/portfolio/thumbnails/2.jpg" class="img-fluid img1" alt="My picture">
+            </a>
+            <figcaption class="text-center p-4">
+                <small class="d-block">Category Name</small><span>Project 2</span>
+            </figcaption>
+            <div class="modal" id="item2">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <header class="modal-header">
+                            <h3>Bootstrap </h3>
+                            <button class="close" data-dismiss="modal">&times;</button>
+                        </header>
+                        <div class="modal-body text-center">
+                            <img data-toggle="modal" src="img/portfolio/fullsize/2.jpg" class="img-fluid m-3" alt="My picture" >
+                            <p><strong>Ici c'est modal </strong>Maecenas sed diam eget risus varius blandit sit amet non magna. Vestibulum id ligula porta felis euismod semper. Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                        </div>
+                        <footer class="modal-footer">
+                            <button class="btn btn-secondary" data-dismiss="modal" >Back</button>
+                        </footer>
+                    </div>
+                </div>
+            </div>
         </figure>
+
+        <!-------------------------------------------->
+
         <figure class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
-           <a href="#">
-               <img src="img/portfolio/thumbnails/3.jpg" class="img-fluid" alt="My picture">
-           </a>
-           <figcaption class="text-center p-4">
-               <small class="d-block">Category Name</small><span>Project 3</span>
-           </figcaption>
+            <a href="#item3" data-toggle="modal">
+                <img src="img/portfolio/thumbnails/3.jpg" class="img-fluid img1" alt="My picture">
+            </a>
+            <figcaption class="text-center p-4">
+                <small class="d-block">Category Name</small><span>Project 3</span>
+            </figcaption>
+            <div class="modal" id="item3">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <header class="modal-header">
+                            <h3>Bootstrap </h3>
+                            <button class="close" data-dismiss="modal">&times;</button>
+                        </header>
+                        <div class="modal-body text-center">
+                            <img data-toggle="modal" src="img/portfolio/fullsize/3.jpg" class="img-fluid m-3" alt="My picture" >
+                            <p><strong>Ici c'est modal </strong>Maecenas sed diam eget risus varius blandit sit amet non magna. Vestibulum id ligula porta felis euismod semper. Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                        </div>
+                        <footer class="modal-footer">
+                            <button class="btn btn-secondary" data-dismiss="modal" >Back</button>
+                        </footer>
+                    </div>
+                </div>
+            </div>
         </figure>
+
+        <!-------------------------------------------->
+
         <figure class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
-           <a href="#">
-               <img src="img/portfolio/thumbnails/4.jpg" class="img-fluid" alt="My picture">
-           </a>
-           <figcaption class="text-center p-4">
-               <small class="d-block">Category Name</small><span>Project 4</span>
-           </figcaption>
+            <a href="#item4" data-toggle="modal">
+                <img src="img/portfolio/thumbnails/4.jpg" class="img-fluid img1" alt="My picture">
+            </a>
+            <figcaption class="text-center p-4">
+                <small class="d-block">Category Name</small><span>Project 4</span>
+            </figcaption>
+            <div class="modal" id="item4">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <header class="modal-header">
+                            <h3>Bootstrap </h3>
+                            <button class="close" data-dismiss="modal">&times;</button>
+                        </header>
+                        <div class="modal-body text-center">
+                            <img data-toggle="modal" src="img/portfolio/fullsize/4.jpg" class="img-fluid m-3" alt="My picture" >
+                            <p><strong>Ici c'est modal </strong>Maecenas sed diam eget risus varius blandit sit amet non magna. Vestibulum id ligula porta felis euismod semper. Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                        </div>
+                        <footer class="modal-footer">
+                            <button class="btn btn-secondary" data-dismiss="modal" >Back</button>
+                        </footer>
+                    </div>
+                </div>
+            </div>
         </figure>
+
+        <!-------------------------------------------->
+
         <figure class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
-           <a href="#">
-               <img src="img/portfolio/thumbnails/5.jpg" class="img-fluid" alt="My picture">
-           </a>
-           <figcaption class="text-center p-4">
-               <small class="d-block">Category Name</small><span>Project 5</span>
-           </figcaption>
+            <a href="#item5" data-toggle="modal">
+                <img src="img/portfolio/thumbnails/5.jpg" class="img-fluid img1" alt="My picture">
+            </a>
+            <figcaption class="text-center p-4">
+                <small class="d-block">Category Name</small><span>Project 5</span>
+            </figcaption>
+            <div class="modal" id="item5">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <header class="modal-header">
+                            <h3>Bootstrap </h3>
+                            <button class="close" data-dismiss="modal">&times;</button>
+                        </header>
+                        <div class="modal-body text-center">
+                            <img data-toggle="modal" src="img/portfolio/fullsize/5.jpg" class="img-fluid m-3" alt="My picture" >
+                            <p><strong>Ici c'est modal </strong>Maecenas sed diam eget risus varius blandit sit amet non magna. Vestibulum id ligula porta felis euismod semper. Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                        </div>
+                        <footer class="modal-footer">
+                            <button class="btn btn-secondary" data-dismiss="modal" >Back</button>
+                        </footer>
+                    </div>
+                </div>
+            </div>
         </figure>
+
+        <!-------------------------------------------->
+
         <figure class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
-           <a href="#">
-               <img src="img/portfolio/thumbnails/6.jpg" class="img-fluid" alt="My picture">
-           </a>
-           <figcaption class="text-center p-4">
-               <small class="d-block">Category Name</small><span>Project 6</span>
-           </figcaption>
+            <a href="#item6" data-toggle="modal">
+                <img src="img/portfolio/thumbnails/6.jpg" class="img-fluid img1" alt="My picture">
+            </a>
+            <figcaption class="text-center p-4">
+                <small class="d-block">Category Name</small><span>Project 6</span>
+            </figcaption>
+            <div class="modal" id="item6">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <header class="modal-header">
+                            <h3>Bootstrap </h3>
+                            <button class="close" data-dismiss="modal">&times;</button>
+                        </header>
+                        <div class="modal-body text-center">
+                            <img data-toggle="modal" src="img/portfolio/fullsize/6.jpg" class="img-fluid m-3" alt="My picture" >
+                            <p><strong>Ici c'est modal </strong>Maecenas sed diam eget risus varius blandit sit amet non magna. Vestibulum id ligula porta felis euismod semper. Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                        </div>
+                        <footer class="modal-footer">
+                            <button class="btn btn-secondary" data-dismiss="modal" >Back</button>
+                        </footer>
+                    </div>
+                </div>
+            </div>
         </figure>
+
+    </div>
+    <div id="carouselControl" class="carousel slide " data-ride="carousel">
+        <div class="carousel-inner w-50 offset-lg-3" role="listbox">
+            <div class="carousel-item active">
+                <img src="img/portfolio/fullsize/1.jpg" class="d-block img-fluid m-3" alt="My picture" >
+            </div>
+            <div class="carousel-item">
+                <img src="img/portfolio/fullsize/2.jpg" class="d-block img-fluid m-3" alt="My picture" >
+            </div>
+            <div class="carousel-item">
+                <img src="img/portfolio/fullsize/3.jpg" class="d-block img-fluid m-3" alt="My picture" >
+            </div>
+            <div class="carousel-item">
+                <img src="img/portfolio/fullsize/4.jpg" class="d-block img-fluid m-3" alt="My picture" >
+            </div>
+            <div class="carousel-item">
+                <img src="img/portfolio/fullsize/5.jpg" class="d-block img-fluid m-3" alt="My picture" >
+            </div>
+            <div class="carousel-item">
+                <img src="img/portfolio/fullsize/6.jpg" class="d-block img-fluid m-3" alt="My picture" >
+            </div>
+            <a class="carousel-control-prev" href="#carouselControl" type="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            </a>
+            <a class="carousel-control-next" href="#carouselControl" type="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            </a>
+        </div>
     </div>
 
 
-    <div class="">
-        <section class="bg-inverse text-white p-5 text-center">
-            <h2 class="text-center display-5 font-weight-bold pb-3">Free Download at Start Bootstrap!</h2>
-            <a href="#" class="btn btn-warning ">Download Now!</a>
-        </section>
-    </div>
+<div class="">
+    <section class="bg-inverse text-white p-5 text-center">
+        <h2 class="text-center display-5 font-weight-bold pb-3">Free Download at Start Bootstrap!</h2>
+        <a href="#" class="btn btn-warning ">Download Now!</a>
+    </section>
+</div>
 
-    <section id="contact" class="text-center ">
-        <h2 class="p-4">Let's Get In Touch!</h2>
-        <div class="container">
+<section id="contact" class="text-center ">
+    <h2 class="p-4">Let's Get In Touch!</h2>
+    <div class="container">
         <div class="row">
             <div class="col-lg-8 offset-lg-2">
                 <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!
@@ -145,19 +309,21 @@
             </div>
         </div>
     </div>
-    </section>
-
-    <!-- jQuery -->
-     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-
-    <!-- Plugin JavaScript -->
+</section>
 
 
 
-    <!-- Theme JavaScript -->
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+
+<!-- Plugin JavaScript -->
+
+
+
+<!-- Theme JavaScript -->
 </body>
 </html>
